[metadata]
name = Test Toolkit
version = 1.0
description = Yet another python test toolkit
url = https://github.com/peter1010/test_toolkit
author = Peter1010
author_email = peter1010@localnet
classifiers =
	Programming Language :: Python :: 3
    License :: OSI Approved :: GPL
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
